--- a/OtoGalerim/app/src/main/res/layout/ilanlarlayout.xml
+++ b/OtoGalerim/app/src/main/res/layout/ilanlarlayout.xml
@@ -2,11 +2,11 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#EEEEEE"
     android:orientation="horizontal"
     android:padding="3dp"
     android:layout_margin="3dp"
-
+    android:background="#EEEEEE"
+    android:id="@+id/ilanLinearLayout"
     android:layout_height="wrap_content">
 
 
@@ -14,14 +14,16 @@
         android:layout_width="0dp"
         android:layout_weight="1.1"
         android:layout_height="100dp"
-        android:id="@+id/ilanlarimIlanResim"
+
+        android:id="@+id/ilanlarIlanResim"
         />
 
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_weight="3"
         android:orientation="vertical"
-        android:layout_marginLeft="5dp"
+        android:layout_margin="3dp"
+        android:layout_marginLeft="10dp"
         android:layout_height="match_parent">
 
         <TextView
@@ -31,7 +33,16 @@
             android:textSize="20dp"
             android:layout_alignParentTop="true"
             android:layout_height="wrap_content"
-            android:id="@+id/ilanlarimIlanBaslik"/>
+            android:id="@+id/ilanlarIlanBaslik"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:text="deneme"
+            android:textColor="#0F3057"
+            android:textSize="20dp"
+
+            android:layout_above="@+id/ilanlarIlanFiyat"
+            android:layout_height="wrap_content"
+            android:id="@+id/ilanlarIlanAdres"/>
         <TextView
             android:layout_width="match_parent"
             android:text="deneme"
@@ -39,8 +50,9 @@
             android:textSize="15dp"
             android:layout_alignParentBottom="true"
             android:gravity="right|bottom"
+
             android:layout_height="wrap_content"
-            android:id="@+id/ilanlarimIlanFiyat"/>
+            android:id="@+id/ilanlarIlanFiyat"/>
     </RelativeLayout>
 
 </LinearLayout>
