--- a/OtoGalerim/app/src/main/res/layout/activity_ilan_detay.xml
+++ b/OtoGalerim/app/src/main/res/layout/activity_ilan_detay.xml
@@ -21,7 +21,7 @@
         android:background="#0F3057"/>
 
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ilanDetaysliderLayout"
         android:layout_width="match_parent"
         android:layout_height="200dp"
@@ -33,7 +33,15 @@
             android:layout_height="match_parent"
             android:id="@+id/ilanDetaySlider"
             android:background="#728caf"></android.support.v4.view.ViewPager>
-    </LinearLayout>
+
+        <android.support.v4.widget.CircleImageView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/sliderNokta"
+            app:ci_drawable="@color/colorAccent"
+            />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_below="@+id/ilanDetaysliderLayout"
