--- a/OtoGalerim/app/src/main/res/layout/activity_ilan_detay.xml
+++ b/OtoGalerim/app/src/main/res/layout/activity_ilan_detay.xml
@@ -34,12 +34,13 @@
             android:id="@+id/ilanDetaySlider"
             android:background="#728caf"></android.support.v4.view.ViewPager>
 
-        <android.support.v4.widget.CircleImageView
+        <me.relex.circleindicator.CircleIndicator
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentBottom="true"
             android:id="@+id/sliderNokta"
             app:ci_drawable="@color/colorAccent"
+            app:ci_drawable_unselected="@color/colorPrimaryDark"
             />
     </RelativeLayout>
 
