--- a/OtoGalerim/app/src/main/res/layout/content_main.xml
+++ b/OtoGalerim/app/src/main/res/layout/content_main.xml
@@ -100,6 +100,7 @@
                 android:paddingBottom="10dp"
                 android:padding="8dp"
                 android:textStyle="bold"
+                android:id="@+id/iletisimBilgileri"
                 android:textSize="15dp"
                 android:text="iletisim bilgileri" />
 
