--- a/OtoGalerim/app/src/main/res/layout/activity_bilgi.xml
+++ b/OtoGalerim/app/src/main/res/layout/activity_bilgi.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/userbilgi_pass"/>
-    <EditText
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="guncelle"
