--- a/sohbetuygulamasi/app/src/main/res/layout/activity_kayit_ol.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_kayit_ol.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#ecf0f1"
     android:orientation="vertical"
-    tools:context=".KayitOlActivity">
+    tools:context=".Acitivity.KayitOlActivity">
 
 
 
