--- a/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
+++ b/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_notifications" />
 
+    <item
+        android:id="@+id/navigation_exit"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="Çıkış" />
+
 </menu>
