--- a/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_giris.xml
@@ -4,11 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ecf0f1"
     android:orientation="vertical"
-    tools:context=".Acitivity.KayitOlActivity">
-
-
+    tools:context=".Acitivity.GirisActivity">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
@@ -35,32 +32,31 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="20dp"
-                android:text="ilkos ile sohbet uygulaması-kayit"
+                android:text="ilkos ile sohbet uygulaması-giris"
                 android:gravity="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="20dp"/>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_email"
+
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
 
 
-            <EditText
-                android:id="@+id/input_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="ilkos email adresini gir" />
+                <EditText
+                    android:id="@+id/input_email_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="ilkos email adresini gir" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/input_password"
+                    android:id="@+id/input_password_login"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="ilkos parolanı gir" />
@@ -72,8 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="20dp"
-                android:text="hesabım var ben ilkosum"
-                android:id="@+id/hesapvarText"
+                android:text="kayit ol ilkos"
+                android:id="@+id/hesapYok"
                 android:gravity="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="20dp"/>
@@ -84,8 +80,8 @@
                 android:background="@color/colorPrimaryDark"
                 android:layout_gravity="right"
                 android:layout_height="wrap_content"
-                android:id="@+id/registerButon"
-                android:text="ilkos burdan kayit ol"/>
+                android:id="@+id/loginButon"
+                android:text="ilkos burdan giris yap"/>
 
         </LinearLayout>
 
