--- a/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
+++ b/sohbetuygulamasi/app/src/main/res/menu/navigation.xml
@@ -12,13 +12,13 @@
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_profil"
+        android:icon="@drawable/defaultprofile"
+        android:title="Profil" />
 
     <item
         android:id="@+id/navigation_exit"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/exit"
         android:title="Çıkış" />
 
 </menu>
