--- a/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/fragment_kullanici_profil.xml
@@ -97,7 +97,7 @@
 
     <Button
         android:layout_width="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:padding="10dp"
         android:background="@color/colorPrimaryDark"
         android:layout_gravity="right"
@@ -105,7 +105,43 @@
         android:layout_height="wrap_content"
         android:id="@+id/bilgiGuncelleButon"
         android:text="Bilgi Guncelle"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
+            <Button
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="30dp"
+                android:padding="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:layout_gravity="right"
+                android:layout_marginRight="5dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/bilgiIstekButonu"
+                android:text="istekler"/>
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_marginTop="30dp"
+                android:padding="10dp"
+                android:background="@color/colorPrimaryDark"
+                android:layout_gravity="right"
+                android:layout_marginLeft="5dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/bilgiArkadasButon"
+                android:text="Arkadaslarınız"/>
+
+
+        </LinearLayout>
     </LinearLayout>
+
+
 
     </android.support.v7.widget.CardView>
 
