--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -13,32 +13,32 @@
         card_view:cardElevation="10dp"
         android:layout_alignParentTop="true">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="15dp"
-        android:background="@drawable/back_image"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginLeft="15dp"
+                android:background="@drawable/back_image"/>
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="adssadad"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:layout_marginRight="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="7"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:id="@+id/chat_username_textview"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="7"/>
 
-    </LinearLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
@@ -52,33 +52,41 @@
         android:id="@+id/card_view_chat_bottom"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        card_view:cardBackgroundColor="#dfe6e9"
         card_view:cardElevation="5dp"
         android:layout_alignParentBottom="true">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal">
-
-        <EditText
-            android:layout_width="0dp"
+        <LinearLayout
+            android:padding="5dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:hint="Mesaj gir"
-            android:minHeight="50dp"
-            android:layout_marginRight="5dp"
-            android:paddingLeft="12dp"
-            android:background="@null"
-            android:inputType="text"
-            />
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal">
 
-        <android.support.design.widget.FloatingActionButton
-            android:layout_width="0dp"
-            android:layout_marginLeft="5dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-    </LinearLayout>
+            <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="5"
+                android:hint="Mesaj gir"
+                android:id="@+id/mesajTextEdittext"
+                android:minHeight="50dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="4dp"
+                android:background="#fff"
+                android:paddingLeft="12dp"
+                android:inputType="text"
+                />
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="0dp"
+                android:layout_marginLeft="5dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:backgroundTint="@color/colorPrimary"
+                android:id="@+id/sendMessageButton"
+
+                android:layout_weight="1"/>
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
 
