--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -9,7 +9,7 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view_chat"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="80dp"
         card_view:cardElevation="10dp"
         android:layout_alignParentTop="true">
 
@@ -21,7 +21,7 @@
             <ImageView
                 android:layout_width="0dp"
                 android:layout_weight="1"
-                android:layout_height="match_parent"
+                android:layout_height="30dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="5dp"
@@ -36,7 +36,7 @@
                 android:textStyle="bold"
                 android:layout_marginRight="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_weight="7"/>
+                android:layout_weight="10"/>
 
         </LinearLayout>
 
@@ -46,6 +46,8 @@
         android:layout_width="match_parent"
         android:layout_above="@id/card_view_chat_bottom"
         android:layout_below="@id/card_view_chat"
+        android:id="@+id/chat_recycler_view"
+        android:background="@drawable/background_image_chat"
         android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -80,8 +82,9 @@
             <android.support.design.widget.FloatingActionButton
                 android:layout_width="0dp"
                 android:layout_marginLeft="5dp"
+                android:layout_marginTop="12dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
+                android:layout_marginBottom="12dp"
                 android:backgroundTint="@color/colorPrimary"
                 android:id="@+id/sendMessageButton"
 
