--- a/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
+++ b/sohbetuygulamasi/app/src/main/res/layout/activity_chat.xml
@@ -79,7 +79,7 @@
                 android:inputType="text"
                 />
 
-            <android.support.design.widget.FloatingActionButton
+            <Button
                 android:layout_width="0dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="12dp"
