--- a/asansor/app/src/main/res/layout/activity_main.xml
+++ b/asansor/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
             android:text="Tahsilat Yap" />
 
         <Button
-            android:id="@+id/ilanVerButon"
+            android:id="@+id/arizaTanimlaButton"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
@@ -78,7 +78,7 @@
             android:paddingBottom="10dp"
             android:padding="8dp"
             android:textStyle="bold"
-            android:id="@+id/iletisimBilgileri"
+            android:id="@+id/yapilacakBakimlarButton"
             android:textSize="15dp"
             android:text="Yapılacak bakımlar" />
 
