--- a/asansor/app/src/main/res/layout/activity_yapilacak_bakimlar.xml
+++ b/asansor/app/src/main/res/layout/activity_yapilacak_bakimlar.xml
@@ -27,6 +27,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:id="@+id/yapilacakBakimlarBugunButton"
             android:text="Bugün"
             android:layout_height="wrap_content" />
         <Button
@@ -34,6 +35,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:id="@+id/yapilacakBakimlarBuayButton"
             android:text="Bu Ay"
             android:layout_height="wrap_content" />
         <Button
@@ -41,6 +43,7 @@
             android:layout_weight="1"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:id="@+id/yapilacakBakimlarTumuButton"
             android:text="Tümü"
             android:layout_height="wrap_content" />
     </LinearLayout>
