--- a/asansor/app/src/main/res/layout/activity_main.xml
+++ b/asansor/app/src/main/res/layout/activity_main.xml
@@ -91,6 +91,7 @@
             android:background="#2980b9"
             android:paddingBottom="10dp"
             android:textStyle="bold"
+            android:id="@+id/bekleyenArizalarButton"
             android:textSize="15dp"
             android:text="Bekleyen Arızalar" />
 
@@ -119,6 +120,26 @@
             android:textSize="15dp"
             android:id="@+id/bakimButton"
             android:text="BAKIM"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginLeft="20dp"
+
+            android:gravity="center"
+            android:background="#ecf0f1"
+            android:paddingBottom="10dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            android:id="@+id/arizaButton"
+            android:text="ARIZA"/>
+
+
     </LinearLayout>
 
 </LinearLayout>
