--- a/asansor/app/src/main/res/layout/activity_bakim_sec.xml
+++ b/asansor/app/src/main/res/layout/activity_bakim_sec.xml
@@ -18,16 +18,25 @@
             android:text="QR Code"
             android:id="@+id/QRCodeBakim"
             android:layout_marginBottom="40dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="20dp"
+            android:text="asansor id manual giris"/>
         <EditText
             android:layout_width="200dp"
             android:layout_height="40dp"
+            android:layout_marginTop="12dp"
             android:id="@+id/manualgirisEditText"
             android:gravity="center"
             android:background="@color/colorPrimaryDark"
-            android:text="asansor id manual giris"/>
+            android:hint="id"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:id="@+id/manualgirisOnayButton"
             android:text="Onay"/>
     </LinearLayout>
